<resources>
    <string name="app_name">FriendFries</string>
    <string name="Host">Host</string>
    <string name="Join">Join</string>
    <string name="Settings">Settings</string>
    <string name="FriendFries">Friend Fries</string>
    <string name="enter_room_code">Enter Room Code</string>
    <string name="join_room">Join Room</string>
    <string name="Back">Back</string>
    <string name="player_name_editable">Player Name</string>
    <string name="set_name">Set Name</string>
</resources>
